<resources>
    <string name="app_name">AppColorido</string>
    <string name="sing_in">Sing In</string>
    <string name="user_name_e_mail_address">User Name/E-Mail Address</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="textfield">TextField</string>
    <string name="price">Price:</string>
    <string name="image_id">Image ID:</string>
    <string name="download">Download</string>
    <string name="owner">Owner:</string>
    <string name="description">Description:</string>
</resources>
