<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pag3_Activity"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textfield"
        android:background="@color/caixinha"
        android:padding="25dp"
        android:drawableEnd="@drawable/ic_search_black_24dp"
        android:drawableRight="@drawable/ic_search_black_24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:padding="80dp"
            android:background="@color/BackGround"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textColorHint="@color/BackGround"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_id"
                android:textColorHint="@color/BackGround"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:background="@color/caixinha"
                android:textColor="@color/fonte"
                android:layout_marginTop="60dp"
                />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/BackGround"
            />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textColor="@color/caixinha"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/caixinha"
            android:textSize="20sp"
            />
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sjidfsahidhsaijdshkdshajkdsjajdsahkdhsakdjsajsadhgjdahjdldsdalddsaklsdaklklksdalkslaljdsaldsaksadsa"
            android:textColor="@color/caixinha"
            android:textSize="13sp"

            />
        <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/BackGround"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >

            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="80dp"
                android:background="@color/BackGround"
                android:layout_marginRight="13dp"
                />
            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="80dp"
                android:background="@color/BackGround"
                android:layout_marginRight="13dp"
                />
            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="80dp"
                android:background="@color/BackGround"
                android:layout_marginRight="13dp"
                />
            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="80dp"
                android:background="@color/BackGround"
                android:layout_marginRight="13dp"
                />
            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="80dp"
                android:background="@color/BackGround"
                android:layout_marginRight="15dp"
                />



        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/caixinha"
        android:orientation="vertical"
        >


    </LinearLayout>
</LinearLayout>




