<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    android:orientation="vertical"
    tools:context=".pag2_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/sing_in"
            android:textColor="@color/fonte"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20sp"
            android:text="@string/user_name_e_mail_address"
            android:textColor="@color/fonte"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/caixinha"
            android:paddingBottom="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/password"
            android:textColor="@color/fonte"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/caixinha"
            android:paddingTop="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/borda"
            android:text="Creat a new account"
            android:textColor="@color/fonte" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/borda"
            android:text="Sing in"
            android:textColor="@color/fonte"
            android:layout_marginLeft="10dp"

            />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>